--- a/VaadinMavenSpring/src/main/webapp/WEB-INF/web.xml
+++ b/VaadinMavenSpring/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,8 @@
             /WEB-INF/spring-services.xml,
             /WEB-INF/vaadin-controller.xml,
             /WEB-INF/vaadin-ui.xml,
-            /WEB-INF/spring-aop.xml
+            /WEB-INF/spring-aop.xml,
+            classpath:cxf/cxf.xml
         </param-value>
     </context-param>
     <context-param>
@@ -31,6 +32,16 @@
             <param-value>springHelloWorld</param-value>
         </init-param>
     </servlet>
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>
+            org.apache.cxf.transport.servlet.CXFServlet
+        </servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/ws/*</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>VaadinApplication</servlet-name>
         <url-pattern>/vaadin/*</url-pattern>
