--- a/VaadinMavenSpring/src/main/webapp/WEB-INF/web.xml
+++ b/VaadinMavenSpring/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,8 @@
             /WEB-INF/vaadin-controller.xml,
             /WEB-INF/vaadin-ui.xml,
             /WEB-INF/spring-aop.xml,
-            classpath:cxf/cxf.xml
+            classpath:cxf/cxf.xml,
+            /WEB-INF/spring-security.xml
         </param-value>
     </context-param>
     <context-param>
@@ -38,6 +39,7 @@
             org.apache.cxf.transport.servlet.CXFServlet
         </servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
         <url-pattern>/ws/*</url-pattern>
@@ -50,12 +52,25 @@
         <servlet-name>VaadinApplication</servlet-name>
         <url-pattern>/VAADIN/*</url-pattern>
     </servlet-mapping>
+
+    <!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>
+                  org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file/>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
