--- a/VaadinMavenSpring/pom.xml
+++ b/VaadinMavenSpring/pom.xml
@@ -1,263 +1,266 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bpc</groupId>
-    <artifactId>VaadinMavenSpring</artifactId>
-    <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+   <groupId>com.bpc</groupId>
+   <artifactId>VaadinMavenSpring</artifactId>
+   <packaging>war</packaging>
+   <version>1.0-SNAPSHOT</version>
 
-    <name>VaadinMavenSpring</name>
-    <url>http://maven.apache.org</url>    
-    <repositories>
-        <repository>
-            <id>jboss</id>
-            <url>http://repository.jboss.org/maven2/</url>
-        </repository>
-        <repository>
-          <id>apache-snapshots</id>
-          <name>Apache SNAPSHOT Repository</name>
-          <url>http://repository.apache.org/snapshots/</url>
-          <snapshots>
-             <enabled>true</enabled>
-          </snapshots>
-       </repository>
-    </repositories>
+   <name>VaadinMavenSpring</name>
+   <url>http://maven.apache.org</url>
+   <repositories>
+      <repository>
+         <id>jboss</id>
+         <url>http://repository.jboss.org/maven2/</url>
+      </repository>
+      <repository>
+         <id>apache-snapshots</id>
+         <name>Apache SNAPSHOT Repository</name>
+         <url>http://repository.apache.org/snapshots/</url>
+         <snapshots>
+            <enabled>true</enabled>
+         </snapshots>
+      </repository>
+   </repositories>
 
-    <properties>
-        <cxf.version>2.2.3</cxf.version>
-        <spring.version>3.0.3.RELEASE</spring.version>
-    </properties>
+   <properties>
+      <cxf.version>2.2.3</cxf.version>
+      <spring.version>3.0.3.RELEASE</spring.version>
+   </properties>
 
-    <dependencies>
+   <dependencies>
+      <dependency>
+         <groupId>net.sf.jxls</groupId>
+         <artifactId>jxls-core</artifactId>
+         <version>1.0-RC-3</version>
+      </dependency>
 
-        <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin</artifactId>
-            <version>6.7.1</version>
-        </dependency>
+      <dependency>
+         <groupId>com.vaadin</groupId>
+         <artifactId>vaadin</artifactId>
+         <version>6.7.1</version>
+      </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>servlet-api</artifactId>
+         <version>2.5</version>
+         <scope>provided</scope>
+      </dependency>
 
-        <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
-        </dependency>
+      <dependency>
+         <groupId>javax.servlet.jsp</groupId>
+         <artifactId>jsp-api</artifactId>
+         <version>2.1</version>
+         <scope>provided</scope>
+      </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.9</version>
-            <scope>test</scope>
-        </dependency>
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.9</version>
+         <scope>test</scope>
+      </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-asm</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
-            <version>3.0.3.RELEASE</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-asm</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-beans</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-core</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-web</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>javax.persistence</groupId>
+         <artifactId>persistence-api</artifactId>
+         <version>1.0</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-tx</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-orm</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-webmvc</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-aspects</artifactId>
+         <version>3.0.3.RELEASE</version>
+         <type>jar</type>
+         <scope>compile</scope>
+      </dependency>
 
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.6.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>3.0.3.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjtools</artifactId>
-            <version>1.5.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>juli</artifactId>
-            <version>6.0.29</version>
-        </dependency>
+      <dependency>
+         <groupId>org.aspectj</groupId>
+         <artifactId>aspectjrt</artifactId>
+         <version>1.6.5</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-aop</artifactId>
+         <version>3.0.3.RELEASE</version>
+      </dependency>
+      <dependency>
+         <groupId>org.aspectj</groupId>
+         <artifactId>aspectjtools</artifactId>
+         <version>1.5.4</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.tomcat</groupId>
+         <artifactId>juli</artifactId>
+         <version>6.0.29</version>
+      </dependency>
 
-        <dependency>
-            <groupId>jetty</groupId>
-            <artifactId>jetty-plus</artifactId>
-            <version>6.0.0</version>
-        </dependency>
-        <dependency>
+      <!-- <dependency> -->
+      <!-- <groupId>jetty</groupId> -->
+      <!-- <artifactId>jetty-plus</artifactId> -->
+      <!-- <version>6.0.0</version> -->
+      <!-- </dependency> -->
+      <!-- <dependency> -->
+      <!-- <groupId>org.mortbay.jetty</groupId> -->
+      <!-- <artifactId>jetty-management</artifactId> -->
+      <!-- <version>6.1.25</version> -->
+      <!-- </dependency> -->
+
+      <!-- <dependency> -->
+      <!-- <groupId>org.mortbay.jetty</groupId> -->
+      <!-- <artifactId>servlet-api-2.5</artifactId> -->
+      <!-- <version>6.1.2</version> -->
+      <!-- </dependency> -->
+
+      <dependency>
+         <groupId>commons-dbcp</groupId>
+         <artifactId>commons-dbcp</artifactId>
+         <version>1.4</version>
+      </dependency>
+      <dependency>
+         <groupId>com.oracle</groupId>
+         <artifactId>ojdbc</artifactId>
+         <version>10.2.0.4</version>
+      </dependency>
+
+
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate</artifactId>
+         <version>3.2.6.ga</version>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-annotations</artifactId>
+         <version>3.2.0.ga</version>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-commons-annotations</artifactId>
+         <version>3.2.0.Final</version>
+      </dependency>
+
+      <!-- CXF Dependencies -->
+      <dependency>
+         <groupId>org.apache.cxf</groupId>
+         <artifactId>cxf-rt-frontend-jaxws</artifactId>
+         <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.cxf</groupId>
+         <artifactId>cxf-rt-transports-http</artifactId>
+         <version>${cxf.version}</version>
+      </dependency>
+      <!-- Jetty is needed if you're are not using the CXFServlet -->
+      <dependency>
+         <groupId>org.apache.cxf</groupId>
+         <artifactId>cxf-rt-transports-http-jetty</artifactId>
+         <version>${cxf.version}</version>
+      </dependency>
+
+      <!-- Spring Security -->
+      <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-core</artifactId>
+         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-web</artifactId>
+         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-config</artifactId>
+         <version>${spring.version}</version>
+      </dependency>
+
+      <!-- Postgress SQL driver -->
+      <!--<dependency> <groupId>postgresql</groupId> <artifactId>postgresql</artifactId> 
+         <version>9.0-801.jdbc4</version> </dependency> -->
+
+      <!-- Log4j -->
+      <dependency>
+         <groupId>log4j</groupId>
+         <artifactId>log4j</artifactId>
+         <version>1.2.9</version>
+      </dependency>
+
+   </dependencies>
+
+
+   <build>
+      <finalName>VaadinMavenSpring</finalName>
+      <plugins>
+         <plugin>
             <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty-management</artifactId>
-            <version>6.1.25</version>
-        </dependency>
+            <artifactId>maven-jetty-plugin</artifactId>
+            <version>6.1.15</version>
+            <configuration>
+               <connectors>
+                  <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                     <port>80</port>
+                  </connector>
+               </connectors>
+               <scanIntervalSeconds>10</scanIntervalSeconds>
+            </configuration>
+         </plugin>
 
-        <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>servlet-api-2.5</artifactId>
-            <version>6.1.2</version>
-        </dependency>
+      </plugins>
 
-        <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc</artifactId>
-            <version>10.2.0.4</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <version>3.2.6.ga</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.2.0.ga</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-commons-annotations</artifactId>
-            <version>3.2.0.Final</version>
-        </dependency>
-
-        <!-- CXF Dependencies-->
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-frontend-jaxws</artifactId>
-            <version>${cxf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-transports-http</artifactId>
-            <version>${cxf.version}</version>
-        </dependency>
-            <!-- Jetty is needed if you're are not using the CXFServlet -->
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-transports-http-jetty</artifactId>
-            <version>${cxf.version}</version>
-        </dependency>
-
-        <!-- Spring Security -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-        <!-- Postgress SQL driver-->
-        <!--<dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.0-801.jdbc4</version>
-        </dependency>-->
-
-        <!-- Log4j -->
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.9</version>
-        </dependency>
-    </dependencies>
-
-
-    <build>
-        <finalName>VaadinMavenSpring</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.15</version>
-                <configuration>
-                    <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                            <port>80</port>
-                        </connector>
-                    </connectors>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
-                </configuration>
-            </plugin>
-
-        </plugins>
-
-    </build>
+   </build>
 
 </project>
