--- a/VaadinMavenSpring/src/main/webapp/WEB-INF/jdbc.properties
+++ b/VaadinMavenSpring/src/main/webapp/WEB-INF/jdbc.properties
@@ -12,6 +12,6 @@
 
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
-jdbc.username=scoringDB
-jdbc.password=scoring123
+jdbc.username=sa
+jdbc.password=123456
 hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
