--- a/VaadinMavenSpring/src/test/resources/jdbc.properties
+++ b/VaadinMavenSpring/src/test/resources/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@10.7.1.87:1521:svfe_tst
-jdbc.username=test_14
-jdbc.password=test_14
+jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
+jdbc.username=scoringDB
+jdbc.password=scoring123
+hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
