--- a/VaadinMavenSpring/pom.xml
+++ b/VaadinMavenSpring/pom.xml
@@ -193,6 +193,7 @@
          <version>3.2.0.Final</version>
       </dependency>
 
+
       <!-- CXF Dependencies -->
       <dependency>
          <groupId>org.apache.cxf</groupId>
@@ -211,6 +212,7 @@
          <version>${cxf.version}</version>
       </dependency>
 
+
       <!-- Spring Security -->
       <dependency>
          <groupId>org.springframework.security</groupId>
@@ -228,9 +230,19 @@
          <version>${spring.version}</version>
       </dependency>
 
+
+        <!-- Postgress SQL driver-->
+
+        <!--<dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.0-801.jdbc4</version>
+        </dependency>-->
+
       <!-- Postgress SQL driver -->
       <!--<dependency> <groupId>postgresql</groupId> <artifactId>postgresql</artifactId> 
          <version>9.0-801.jdbc4</version> </dependency> -->
+
 
       <!-- Log4j -->
       <dependency>
@@ -241,26 +253,22 @@
 
    </dependencies>
 
-
-   <build>
-      <finalName>VaadinMavenSpring</finalName>
-      <plugins>
-         <plugin>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>maven-jetty-plugin</artifactId>
-            <version>6.1.15</version>
-            <configuration>
-               <connectors>
-                  <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                     <port>80</port>
-                  </connector>
-               </connectors>
-               <scanIntervalSeconds>10</scanIntervalSeconds>
-            </configuration>
-         </plugin>
-
-      </plugins>
-
-   </build>
-
+    <build>
+        <finalName>VaadinMavenSpring</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>maven-jetty-plugin</artifactId>
+                <version>6.1.15</version>
+                <configuration>
+                    <connectors>
+                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                            <port>8080</port>
+                        </connector>
+                    </connectors>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                </configuration>
+            </plugin>
+     </plugins>
+    </build>
 </project>
