--- a/trunk/VaadinMavenSpring/src/test/resources/jdbc.properties
+++ b/trunk/VaadinMavenSpring/src/test/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
-jdbc.username=scoringDB
-jdbc.password=scoring123
+jdbc.username=sa
+jdbc.password=123456
 hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
